--- a/packages/express-postgres/package.json
+++ b/packages/express-postgres/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon -e ts -x 'pnpm run build && clear; node build/main.js'",
-    "build": "esbuild --format=esm --platform=node --external=expresss --output-file=build/main.js",
+    "dev": "nodemon -e ts,json -x 'pnpm run build && clear; node build/main.js'",
+    "build": "esbuild --bundle --format=esm --platform=node --external:express --outfile=build/main.js main.ts",
     "test": "vitest"
   },
   "keywords": [],
