--- a/packages/express-postgres/package.json
+++ b/packages/express-postgres/package.json
@@ -21,6 +21,7 @@
     "ulid": "^2.3.0"
   },
   "devDependencies": {
+    "@types/chance": "^1.1.6",
     "esbuild": "^0.23.1",
     "nodemon": "^3.1.4",
     "vitest": "^2.0.5"
