--- a/packages/hono-slonik-postgres-bridge/package.json
+++ b/packages/hono-slonik-postgres-bridge/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "hono-postgres",
+  "name": "hono-slonik-postgres-bridge",
   "version": "1.0.0",
   "description": "",
   "type": "module",
   "scripts": {
     "dev": "nodemon -e ts,json -x 'pnpm run build && clear; node build/main.js'",
-    "build": "esbuild --bundle --format=esm --platform=node --external:express --outfile=build/main.js main.ts",
+    "build": "esbuild --format=esm --platform=node --outfile=build/main.js main.ts",
     "test": "vitest"
   },
   "keywords": [],
@@ -15,7 +15,10 @@
     "@hono/node-server": "^1.12.1",
     "chance": "^1.1.12",
     "hono": "^4.5.6",
-    "postgres": "^3.4.4"
+    "pg": "^8.12.0",
+    "postgres": "^3.4.4",
+    "postgres-bridge": "^1.14.0",
+    "slonik": "^46.0.1"
   },
   "devDependencies": {
     "@types/chance": "^1.1.6",
