--- a/packages/hono-slonik/package.json
+++ b/packages/hono-slonik/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "hono-postgres",
+  "name": "hono-slonik",
   "version": "1.0.0",
   "description": "",
   "type": "module",
   "scripts": {
     "dev": "nodemon -e ts,json -x 'pnpm run build && clear; node build/main.js'",
-    "build": "esbuild --bundle --format=esm --platform=node --external:express --outfile=build/main.js main.ts",
+    "build": "esbuild --bundle --format=esm --platform=node --external:slonik --outfile=build/main.js main.ts",
     "test": "vitest"
   },
   "keywords": [],
@@ -15,7 +15,8 @@
     "@hono/node-server": "^1.12.1",
     "chance": "^1.1.12",
     "hono": "^4.5.6",
-    "postgres": "^3.4.4"
+    "pg": "^8.12.0",
+    "slonik": "^46.0.1"
   },
   "devDependencies": {
     "@types/chance": "^1.1.6",
